# generic-matrix

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  double.c  element.c
app/chapter1/: CMakeLists.txt  example1.3.1.cc  example1.5.1.c  example1.5.1.cc  example1.5.1.cpp  example1.6.1.cc  problem1.2.1.c  problem1.2.1.cc  problem1.2.8.c  problem1.2.8.cc  submatrix.cc
app/chapter2/: CMakeLists.txt  example2.1.1.cc  example2.1.2.cc  example2.2.1.c  example2.2.1.cc  example2.2.2.cc  example2.3.1.cc  problem2.1.1a.cc  problem2.1.1b.cc  problem2.1.1c.cc  problem2.1.4.cc  problem2.2.1a.cc  problem2.2.1b.c  problem2.2.1b.cc  problem2.2.4.cc  problem2.3.1a.cc  problem2.3.1c.cc  problem2.3.1d.cc  problem2.3.1e.cc  problem2.3.1f.cc  problem2.3.2.cc  problem2.3.5.cc  problem2.3.6.cc  problem2.3.7.cc
include/: gmat_error.h  gmatrix.h
include/gmat/: double.h  flp.h  flp.hpp  gauss.h  gauss.hpp  matrix.h  matrix.hpp
include/gmatrix/: double.h  gmatrix.h
src/: CMakeLists.txt  gauss.c  gmatrix.c  matrix.c  matrix.h
tests/: CMakeLists.txt  double.h  matrix_double_test.cc  test_double.cpp  test_new.c
