add_executable(example2.1.1 example2.1.1.cc)
add_executable(example2.1.2 example2.1.2.cc)
add_executable(example2.2.1 example2.2.1.cc)
add_executable(example2.2.2 example2.2.2.cc)

add_executable(problem2.1.1a problem2.1.1a.cc)
add_executable(problem2.1.1b problem2.1.1b.cc)
add_executable(problem2.1.1c problem2.1.1c.cc)
add_executable(problem2.1.4 problem2.1.4.cc)

add_executable(problem2.2.1a problem2.2.1a.cc)
add_executable(problem2.2.1b problem2.2.1b.cc)
add_executable(problem2.2.4 problem2.2.4.cc)
